<resources>
    <string name="app_name">Vision</string>
    <string name="button">LOG IN</string>
    <string name="button2">REGISTER</string>
    <string name="title_activity_main2">Vision</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Vision</string>
    <string name="nav_header_subtitle">Vision Made Simple</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">About Us</string>
    <string name="tab_text_1">Notices</string>
    <string name="tab_text_2">Discuss</string>
    <string name="tab_text_3">Profile</string>
    <string name="user_name">UserName</string>
    <string name="pass_word">Password</string>
    <string name="rem">Remember Me</string>
    <string name="but">Login</string>
    <string name="newbut">Register</string>    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imageView">Profile Photo</string>
    <string name="button3">Add Photo</string>
    <string name="input1">Name</string>
    <string name="rollno">Roll No</string>
    <string name="phnumber">Mobile No.</string>
    <string name="email">Email Id</string>
    <string name="hostelno">Hostel No.</string>
    <string name="roomno">Room No.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="button4">Update</string>
    <string name="welcome_msg">Welcome!</string>
    <string name="sign_out">Sign Out</string>
    <string name="contacts_permission_rationale">Access to account information is required to sign in.</string>
    <string name="invite_menu_label">Invite</string>
    <string name="invitation_message">Please join me for a friendly chat</string>
    <string name="invitation_cta">Call to action</string>
    <string name="invitation_title">Friendly Chat Invite</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="fresh_config">Fresh Config</string>
    <string name="cause_crash">Cause Crash</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="title_home">Notices</string>
    <string name="title_dashboard">Discussion</string>
    <string name="title_notifications">Profile</string>
    <string name="title_activity_main3">Vision</string>
    <string name="title_activity_main4">Vision</string>
    <string name="title_activity_complaint">Register Complaint</string>
    <string name="title_activity_user_complaint">Register Complaint</string>
    <string name="Sel">Select your issue:</string>
    <string name="ava">Select Availability Time:</string>
    <string name="car">Carpenter</string>
    <string name="Desc">Describe your issue...</string>
    <string name="ele">Electrician</string>
    <string name="plu">LAN</string>
    <string name="Other">Other</string>
    <string name="comp">Would you like to receive notifications?</string>
    <string name="title_activity_profile_setting">Profile Settings</string>
    <string name="title_activity_parent">Vision</string>
    <string-array name="spinnerregister">
        <item>Student</item>
        <item>Counsellor</item>
    </string-array>
    <string name="title_activity_student">StudentActivity</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="swagat">Hey Buddy!!</string>
    <string name="select">Select Your Areas Of Interests:</string>
    <string name="ist">Mathematics</string>
    <string name="second">Biology</string>
    <string name="third">GeneralKnowledge</string>
    <string name="fourth">Economics</string>
    <string name="Fifth">Technology</string>
    <string name="Sixth">ComputerScience</string>
    <string name="seventh">Cricket</string>
    <string name="eight">Football</string>
    <string name="ninth">Badminton</string>
    <string name="tenth">Geography</string>
    <string name="eleventh">Politics</string>
    <string name="twelfth">Accounts</string>
    <string name="title_activity_discuss">Vision</string>
    <string name="title_activity_counsellor_profile">Vision</string>
    <string name="select1">Select Your Areas Of Expertise:</string>
    <string name="swagat1">Hey Nice To See U Here..!!</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_add_exam">Add Exam</string>
    <string name="title_activity_add_study">Add Study</string>
    <string name="title_activity_add_institute">Add Institute</string>
    <string-array name="spinit">
        <item>Mathematics</item>
        <item>Biology</item>
        <item>GeneralKnowledge</item>
        <item>Economics</item>
        <item>Technology</item>
        <item>ComputerScience</item>
        <item>Cricket</item>
        <item>Football</item>
        <item>Badminton</item>
        <item>Geography</item>
        <item>Politics</item>
        <item>Accounts</item>
    </string-array>

</resources>
