<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:fontFamily="sans-serif-medium"

    android:layout_width="match_parent">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fontFamily="sans-serif-medium"
        tools:context=".Register"
        tools:layout_editor_absoluteY="81dp"
        android:layout_marginTop="60dp"
        >


        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Update Profile"
                android:textAlignment="center"
                android:textSize="25dp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-medium"
                app:layout_constraintBottom_toTopOf="@+id/input2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/name1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:hint="@string/input1"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toTopOf="@+id/room"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phno">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/email1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/phno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toTopOf="@+id/mail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input2">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/phnumber1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phnumber"
                    android:inputType="phone"
                    android:maxLength="10" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="sans-serif-medium"
                app:layout_constraintBottom_toTopOf="@+id/phno"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/button4"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginStart="136dp"
                android:layout_marginTop="45dp"
                android:layout_marginEnd="187dp"
                android:layout_marginBottom="64dp"
                android:background="#0076f0"
                android:elevation="5dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"

                android:text="@string/button4"
                android:textColor="#ffffff"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.276"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pass" />

        </LinearLayout>

    </android.support.constraint.ConstraintLayout></ScrollView>